new file:   prisma/migrations/20250924135451_init/migration.sql 	modified:   prisma/schema.prisma 	modified:   src/controllers/users/user-register.ts 	modified:   src/schemas/user-schema.ts 	modified:   src/service/users/crypt-password.ts 	modified:   src/service/users/database/user-register.ts 	modified:   src/service/users/database/user-search.ts 	modified:   src/swagger.json 	renamed:    src/tests/crypt-password.test.ts -> tests/crypt-password.test.ts 	renamed:    src/tests/user-register.test.ts -> tests/user-register.test.ts 	modified:   tsconfig.json
