# src/swagger.json
@@ -17,28 +17,28 @@
               "schema": {
                 "type": "object",
                 "properties": {
-                  "name": {
+                  "email": {
                     "type": "string",
-                    "example": "Ivan"
+                    "example": "user@mail.com"
                   },
                   "password": {
                     "type": "string",
                     "example": "strongPassword123!"
                   }
                 },
-                "required": ["name", "password"]
+                "required": ["email", "password"]
               }
             }
           }
         },
         "responses": {
-          "200": {
+          "201": {
             "description": "Пользователь успешно зарегистрирован",
             "content": {
               "application/json": {
                 "example": {
                   "status": "success",
-                  "message": "User created successfully"
+                  "message": "User register"
                 }
               }
             }
@@ -51,10 +51,21 @@
                   "status": "error",
                   "message": "Validation failed",
                   "errors": {
-                    "name": "Name is required",
+                    "email": "Invalid email address",
                     "password": "Password is required"
                   },
                   "timestamp": "2025-09-23T12:34:56.789Z"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Ошибка пользователь уже зарегестрирован",
+            "content": {
+              "application/json": {
+                "example": {
+                  "status": "error",
+                  "message": "Email already exists"
                 }
               }
             }
